script/k8s/pos-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pos-service
spec:
  clusterIP: 10.100.1.1
  selector:
    app: pos
  #type: LoadBalancer #type to be external service/ default type is ClusterIP which is internal only
  ports:
    - protocol: TCP
      port: 8090 #internal service port
      targetPort: 9000 #application port
      #nodePort: 32377 #external service port
