script/k8s/webfrontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webfrontend-service
spec:
  selector:
    app: webfrontend
  #type: LoadBalancer #type to be external service/ default type is ClusterIP which is internal only
  ports:
    - protocol: TCP
      port: 8080 #internal service port
      targetPort: 9100 #application port
      #nodePort: 32377 #external service port
